--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
         },
         {
           id: "ch6",
-          title: "Translation",
+          title: "6.1 - Translations",
           topics: [
             {
               title: "6.1 - Translations",
@@ -347,16 +347,28 @@
         },
         {
           id: "ch7",
-          title: "Other Topics",
+          title: "7.1 - Spelling",
           topics: [
             {
               title: "7.1 - Spelling",
               url: "https://medicalprostuti.github.io/e7/",
             },
+          ],
+        },
+        {
+          id: "ch8",
+          title: "7.2 - One Word Substitution",
+          topics: [
             {
               title: "7.2 - One Word Substitution",
               url: "https://medicalprostuti.github.io/e49/",
             },
+          ],
+        },
+        {
+          id: "ch9",
+          title: "7.3 - Proverbs",
+          topics: [
             {
               title: "7.3 - Proverbs",
               url: "https://medicalprostuti.github.io/e50/",
