--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
         },
         {
           id: "ch7",
-          title: "7.1 - Spelling",
+          title: "Spelling",
           topics: [
             {
               title: "7.1 - Spelling",
@@ -357,20 +357,20 @@
         },
         {
           id: "ch8",
-          title: "7.2 - One Word Substitution",
+          title: "One Word Substitution",
           topics: [
             {
-              title: "7.2 - One Word Substitution",
+              title: "8.1 - One Word Substitution",
               url: "https://medicalprostuti.github.io/e49/",
             },
           ],
         },
         {
           id: "ch9",
-          title: "7.3 - Proverbs",
+          title: "Proverbs",
           topics: [
             {
-              title: "7.3 - Proverbs",
+              title: "9.1 - Proverbs",
               url: "https://medicalprostuti.github.io/e50/",
             },
           ],
